--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "ava --verbose",
     "format": "prettier-standard '{src,test}/**/*.js'",
-    "docs": "jsdoc -c config/jsdoc.json && git add docs"
+    "docs": "rm -rf docs && jsdoc -c config/jsdoc.json && git add docs"
   },
   "keywords": [
     "data",
